--- a/dwec_t03p01_jaime_ana/Ejercicio1/index01.html
+++ b/dwec_t03p01_jaime_ana/Ejercicio1/index01.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DWEC - Ejercicios T0X - Miguel Rodríguez</title>
+    <title>DWEC - Ejercicios T03 - Ana Jaime</title>
     <!-- Enlace al archivo CSS -->
     <link rel="stylesheet" href="css/micss.css">
 </head>
 <body>
-    <p>T0X - Ejercicio 0X - Miguel Rodríguez</p>
+    <p>T03 - Ejercicio 01 - Ana Jaime</p>
     <p id="output"></p>
     
     <!-- Enlace al archivo JavaScript -->
-    <script src="js/ejercicio0X.js"></script>
+    <script src="js/ejercicio01.js"></script>
 </body>
 </html>
