--- a/dwec_t03p01_jaime_ana/Ejercicio22/index22.html
+++ b/dwec_t03p01_jaime_ana/Ejercicio22/index22.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="css/micss.css">
 </head>
 <body>
-    <p>T03 - Ejercicio 22b - Ana Jaime</p>
+    <p>T03 - Ejercicio 22 - Ana Jaime</p>
     <p id="output"></p>
     
     <!-- Enlace al archivo JavaScript -->
-    <script src="js/ejercicio22b.js"></script>
+    <script src="js/ejercicio22.js"></script>
 </body>
 </html>
