--- a/dwec_t04p01_jaime_ana/Ejercicio2/index02.html
+++ b/dwec_t04p01_jaime_ana/Ejercicio2/index02.html
@@ -12,6 +12,8 @@
     <p id="output"></p>
     
     <!-- Enlace al archivo JavaScript -->
-    <script src="js/ejercicio02.js"></script>
+    <script src="js/ejercicio02_alumno.js"></script>
+    <script src="js/ejercicio02_aula.js"></script>
+    <script src="js/ejercicio02_principal.js"></script>
 </body>
 </html>
