Corrigiendo errores en ejercicio 2 UT4

--- a/dwec_t04p01_jaime_ana/Ejercicio2/index02.html
+++ b/dwec_t04p01_jaime_ana/Ejercicio2/index02.html
@@ -14,6 +14,7 @@
     <!-- Enlace al archivo JavaScript -->
     <script src="js/ejercicio02_alumno.js"></script>
     <script src="js/ejercicio02_aula.js"></script>
+    <script src="js/ejercicio02_ampliacion.js"></script>
     <script src="js/ejercicio02_principal.js"></script>
 </body>
 </html>
