Solucionando algunos errores de ejercicio 3 UT4

--- a/dwec_t04p01_jaime_ana/Ejercicio3/index03.html
+++ b/dwec_t04p01_jaime_ana/Ejercicio3/index03.html
@@ -12,6 +12,10 @@
     <p id="output"></p>
     
     <!-- Enlace al archivo JavaScript -->
-    <script src="js/ejercicio03.js"></script>
+  <script src="js/ejercicio03_alumno.js"></script>
+  <script src="js/ejercicio03_aula.js"></script>
+  <script src="js/ejercicio03_asignaturas.js"></script>
+  <script src="js/ejercicio03_profesores.js"></script>
+  <script src="js/ejercicio03_principal.js"></script>
 </body>
 </html>
