--- a/dwec_t04p02_jaime_ana/Ejercicio1/index01.html
+++ b/dwec_t04p02_jaime_ana/Ejercicio1/index01.html
@@ -16,14 +16,15 @@
     <script src="js/ejercicio01_leer_datos.js"></script>
     <script src="js/ejercicio01_autor.js"></script>
     <script src="js/ejercicio01_autores.js"></script>
+    <script src="js/ejercicio01_cliente.js"></script>
+    <script src="js/ejercicio01_clientes.js"></script>
     <script src="js/ejercicio01_libro.js"></script>
     <script src="js/ejercicio01_libros.js"></script>
     <script src="js/ejercicio01_tipoEnvio.js"></script>
     <script src="js/ejercicio01_tiposEnvios.js"></script>
-    <script src="js/ejercicio01_cliente.js"></script>
-    <script src="js/ejercicio01_clientes.js"></script>
     <script src="js/ejercicio01_pedido.js"></script>
     <script src="js/ejercicio01_pedidos.js"></script>
     <script src="js/ejercicio01_tienda.js"></script>
+    <script src="js/ejercicio01_principal.js"></script>
 </body>
 </html>
