--- a/dwec_t04p02_jaime_ana/Ejercicio1/index01.html
+++ b/dwec_t04p02_jaime_ana/Ejercicio1/index01.html
@@ -6,6 +6,8 @@
     <title>DWEC - Ejercicios T04 - Ana Jaime</title>
     <!-- Enlace al archivo CSS -->
     <link rel="stylesheet" href="css/micss.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
 </head>
 <body>
     <p>T04 - Ejercicio 01 - Ana Jaime</p>
@@ -26,5 +28,10 @@
     <script src="js/ejercicio01_pedidos.js"></script>
     <script src="js/ejercicio01_tienda.js"></script>
     <script src="js/ejercicio01_principal.js"></script>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+
 </body>
 </html>
